--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - python >=3.8
   run:
     - asyncssh >=2.11.0,<3
-    - fsspec >=2021.8.1,<=2022.11.0
+    - fsspec >=2021.8.1
     - python >=3.8
 
 test:
